# dirs

./: .gitignore  README.md
15puzzle/: main.cpp  p
AI/VisualizeCNN/: main.ipynb
AdventOfCode2024/Dec1/: CMakeLists.txt  p  p2  solution  solution.cpp  solution2.cpp
AdventOfCode2024/Dec2/: solution.cpp
AdventOfCode2024/Dec3/: solution.cpp  solution2.cpp
AdventOfCode2024/Dec4/: solution.cpp
AdventOfCode2024/Dec5/: p  solution.cpp
AdventOfCode2024/Dec6/: solution.cpp
Assembly/: matrix.asm  primes.asm  sum.asm
Concurrent/Ada/: ex_4.adb
Concurrent/Ada/LAB_2/: ex_2_enhanced.adb
Concurrent/Ada/lab_2/: extended_travelers.adb  extended_travelers.ali
Concurrent/Ada/lab_4/: Makefile.txt  build.gpr  main  (+3 more)
Go/crud_api/: .gitignore  docker-compose.yml  go.mod  main.go
Go/travelers/: collisions.go  default.go  go.mod  main.go
InternetPrograms/: bit_framing.py  signal_propagation.py
InternetPrograms/lab2/: network_model.py  results.txt
InternetPrograms/lab_3/: W  Z_decoded
InternetPrograms/network_project/: network_graph.py
K-means_img_compression/: k_mean.ipynb
TS/lab2/: network_reliability.py
TS/lab_3/: Z  ex_1.py  ex_2_e.py  symulacja_csma_cd.txt
add_to_AlgoLib/Algo/: random_generator  visualize_results.py
add_to_AlgoLib/Algo/4/1_2/: BST.cpp  BST.hpp  CMakeLists.txt  bst_experiment  main_demo.cpp  main_experiment.cpp  plot_results.py  results_increasing.csv  results_random.csv  run
add_to_AlgoLib/Algo/4/3_4/: CMakeLists.txt  RBBST.cpp  RBBST.hpp  main_rb_demo.cpp  main_rb_experiment.cpp  plot_results_rb.py  results_increasing_rb.csv  results_random_rb.csv  run  run_experiment
add_to_AlgoLib/Algo/4/5_6/: CMakeLists.txt  Random.hpp  Splay.cpp  Splay.hpp  main_splay_demo.cpp  main_splay_experiment.cpp  plot_results_splay.py  results_increasing_splay.csv  results_random_splay.csv  run_experiment
basic_website/: index.html  me.html  p1.html  p2.html  p3.html  projects.html
basic_website/css/: style.dev.css  style.dev.css.map  style.min.css  style.min.css.map  style.scss
hangman/: index.html
lego_builder_3d/: CMakeLists.txt  README.md  test_build.sh
lego_builder_3d/include/: Camera.h  Grid.h  InputHandler.h  LegoSystem.h  Math.h  ModelIO.h  Renderer.h  UIRenderer.h  Window.h
lego_builder_3d/resources/: sample_castle.lego
lego_builder_3d/shaders/: brick.frag  brick.vert
lego_builder_3d/src/: Camera.cpp  Grid.cpp  InputHandler.cpp  LegoSystem.cpp  Math.cpp  ModelIO.cpp  Renderer.cpp  UIRenderer.cpp  Window.cpp  main.cpp
rust_cli/: Cargo.toml
rust_cli/src/: lib.rs  projector.rs
simple_programs/assembly/: hex.asm
webserver_cache_rdma/: .gitignore
(+601 files in other folders)
